Fixed theme name not showing up on titlebar

--- a/midnight/css/base.css
+++ b/midnight/css/base.css
@@ -5124,7 +5124,7 @@ img[src*="/assets/9e8f566e6d49e8f4bba138e1d6a50578.svg"] {
 }
 
 .wordmark-2iDDfm:before {
-	content: var(--theme-long-name) + ' ';
+	content: var(--theme-long-name) ' ';
 	text-shadow: 0 0 12px;
 	font-weight: 600;
 	color: var(--accent);
